--- a/src/Microsoft.PowerShell.GlobalTool.Shim/Microsoft.PowerShell.GlobalTool.Shim.csproj
+++ b/src/Microsoft.PowerShell.GlobalTool.Shim/Microsoft.PowerShell.GlobalTool.Shim.csproj
@@ -4,9 +4,10 @@
   <PropertyGroup>
     <Description>Shim for global tool to select appropriate runtime</Description>
     <AssemblyName>Microsoft.PowerShell.GlobalTool.Shim</AssemblyName>
-    <OutputType>EXE</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>Microsoft.PowerShell.GlobalTool.Shim</RootNamespace>
     <UseAppHost>False</UseAppHost>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
   <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" Condition="'$(SDKToUse)' == 'Microsoft.NET.Sdk' " />
